Merged in updates to Apache logging