@@ -185,15 +185,15 @@
             <version>4.9.2</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.13.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.13.3</version>
-        </dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.17.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.0</version>
+		</dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -230,279 +230,4 @@
             <version>2.12.3</version>
         </dependency>
     </dependencies>
-
-
-
-  <build>
-
-    <plugins>
-      <plugin>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>2.5</version>
-        <configuration>
-	      <filesets>
-	        <fileset>
-	          <directory>shadow</directory>
-	          <includes>
-	            <include>**/*.meta</include>
-	            <include>**/*.ll</include>
-	            <include>**/*.s</include>
-	            <include>**/*.bc</include>
-	          </includes>
-	          <excludes>
-	            <exclude>**/*.native.ll</exclude>
-	            <exclude>Linux.ll</exclude>
-	            <exclude>Mac.ll</exclude>
-	            <exclude>Main.ll</exclude>
-	            <exclude>NoArguments.ll</exclude>
-	            <exclude>MainWindows.ll</exclude>
-	            <exclude>NoArgumentsWindows.ll</exclude>
-	            <exclude>Unwind32.ll</exclude>
-	            <exclude>Unwind64.ll</exclude>
-	            <exclude>UnwindWindows32.ll</exclude>
-	            <exclude>UnwindWindows64.ll</exclude>
-	            <exclude>Windows.ll</exclude>
-				<exclude>Shared.ll</exclude>
-	          </excludes>
-	          <followSymlinks>false</followSymlinks>
-	        </fileset>
-	        <fileset>
-	          <directory>tests</directory>
-	          <includes>
-	            <include>**/*.meta</include>
-	          </includes>
-	          <followSymlinks>false</followSymlinks>
-	        </fileset>
-	        <fileset>
-	          <directory>tests-negative</directory>
-	          <includes>
-	            <include>**/*.meta</include>
-	          </includes>
-	          <followSymlinks>false</followSymlinks>
-	        </fileset>
-	        <fileset>
-	          <directory>src/main/java/shadow/jaxb</directory>
-	          <includes>
-	            <include>*.java</include>
-	          </includes>
-	          <followSymlinks>false</followSymlinks>
-	        </fileset>
-	      </filesets>
-	    </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>2.3</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>shadow.Main</mainClass>
-                  <manifestEntries>
-                            <Multi-Release>true</Multi-Release>
-                  </manifestEntries>
-                </transformer>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-              </transformers>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-          <!-->configuration>
-              <release>11</release>
-          </configuration-->
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.0</version>
-          <configuration>
-              <argLine>--illegal-access=permit</argLine>
-          </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jaxb2-maven-plugin</artifactId>
-        <version>2.5.0</version>
-         <executions>
-            <execution>
-                <id>xjc</id>
-                <goals>
-                  <goal>xjc</goal>
-                </goals>
-
-            </execution>
-        </executions>
-        <configuration>
-        		<!-->sources>
-                        <source>src/main/resources/dummy.xsd</source>
-                        <source>src/main/resources/configuration.xsd</source>
-                    </sources-->
-         <outputDirectory>src/main/java</outputDirectory>
-         <packageName>shadow.jaxb</packageName>
-         <episodeFileName>episode</episodeFileName>
-         <clearOutputDir>false</clearOutputDir>
-         <noPackageLevelAnnotations>true</noPackageLevelAnnotations>
-       </configuration>
-
-    </plugin>
-      <plugin>
-      	<groupId>org.antlr</groupId>
-      	<artifactId>antlr4-maven-plugin</artifactId>
-      	<version>4.7</version>
-      	 <executions>
-          <execution>
-            <goals>
-              <goal>antlr4</goal>
-            </goals>
-            <configuration>
-				<outputDirectory>src/main/java/shadow/parse</outputDirectory>
-				<visitor>true</visitor>
-				<listener>false</listener>
-			</configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-    <!-- The contents of this pluginManagement section are Unfortunate nonsense that m2e requires to work -->
-    <!-- Do NOT confuse this with the normal plugin section, it is completely ignored by Maven -->
-    <pluginManagement>
-      <plugins>
-        <plugin>
-         <groupId>org.eclipse.m2e</groupId>
-         <artifactId>lifecycle-mapping</artifactId>
-         <version>1.0.0</version>
-         <configuration>
-           <lifecycleMappingMetadata>
-             <pluginExecutions>
-               <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.antlr</groupId>
-                    <artifactId>antlr4-maven-plugin</artifactId>
-                    <versionRange>[4.7,)</versionRange>
-                    <goals>
-                      <goal>antlr4</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <execute>
-                      <runOnIncremental>true</runOnIncremental>
-                    </execute>
-                  </action>
-                </pluginExecution>
-             </pluginExecutions>
-           </lifecycleMappingMetadata>
-         </configuration>
-        </plugin>
-      </plugins>
-  </pluginManagement>
-  </build>
-  <reporting>
-    <plugins>
-<!--
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9.1</version>
-        <configuration>
-        </configuration>
-      </plugin>
--->
-    </plugins>
-  </reporting>
-  <dependencies>
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.7</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.antlr</groupId>
-    	<artifactId>antlr4-runtime</artifactId>
-    	<version>4.7</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.apache.logging.log4j</groupId>
-    	<artifactId>log4j-api</artifactId>
-    	<version>2.17.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.apache.logging.log4j</groupId>
-    	<artifactId>log4j-core</artifactId>
-    	<version>2.17.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.junit.jupiter</groupId>
-    	<artifactId>junit-jupiter-api</artifactId>
-    	<version>5.6.2</version>
-    	<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.junit.jupiter</groupId>
-    	<artifactId>junit-jupiter-engine</artifactId>
-    	<version>5.6.2</version>
-    	<scope>test</scope>
-    </dependency>
-      <dependency>
-          <groupId>org.junit.jupiter</groupId>
-          <artifactId>junit-jupiter-params</artifactId>
-          <version>5.6.2</version>
-          <scope>test</scope>
-      </dependency>
-    <dependency>
-    	<groupId>org.junit.platform</groupId>
-    	<artifactId>junit-platform-engine</artifactId>
-    	<version>1.6.2</version>
-    	<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.junit.platform</groupId>
-    	<artifactId>junit-platform-commons</artifactId>
-    	<version>1.6.2</version>
-    	<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.junit.platform</groupId>
-    	<artifactId>junit-platform-runner</artifactId>
-    	<version>1.6.2</version>
-    	<scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.codehaus.mojo</groupId>
-    	<artifactId>jaxb2-maven-plugin</artifactId>
-    	<version>2.5.0</version>
-    </dependency>
-    <dependency>
-		<groupId>javax.xml.bind</groupId>
-		<artifactId>jaxb-api</artifactId>
-		<version>2.3.0</version>
-	</dependency>
-  	<dependency>
-      <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>jaxb-runtime</artifactId>
-      <version>2.3.2</version>
-      <scope>runtime</scope>
- 	</dependency>
-	<dependency>
-      <groupId>com.sun.activation</groupId>
-      <artifactId>jakarta.activation</artifactId>
-      <version>1.2.1</version>
-      <scope>runtime</scope>
-  </dependency>
-  </dependencies>
 </project>
